# chip8

./: .gitignore  Cargo.toml  README.md  c8_test.ch8  ibm.ch8  sierpinski.ch8  test.ch8
src/: config.rs  lib.rs  main.rs
src/drivers/: audio.rs  file.rs  input.rs  mod.rs  video.rs
src/emu/: cpu.rs  font.rs  frame.rs  keypad.rs  mod.rs  spec.rs
