[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.17"
simple_logger = "2.1.0"
rand = "0.8.5"
clap = "3.2.6"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
#features = ["gfx"]

